[build-system]
requires = ["setuptools>=62.6", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "dask"
description = "Parallel PyData with Task Scheduling"
maintainers = [{name = "Matthew Rocklin", email = "mrocklin@gmail.com"}]
license = {text = "BSD-3-Clause"}
keywords = ["task-scheduling parallel numpy pandas pydata"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]
readme = "README.rst"
urls = {Homepage = "https://github.com/dask/dask"}
requires-python = ">=3.9"
dependencies = [
    # NOTE: `continuous_integration/test_imports.sh` tests these
    # Change the corresponding line if you change these
    "click >= 8.1",
    "cloudpickle >= 1.5.0",
    "fsspec >= 2021.09.0",
    "packaging >= 20.0",
    "partd >= 1.2.0",
    "pyyaml >= 5.3.1",
    "toolz >= 0.10.0",
    # these importlib.metadata bugs were fixed in 3.10.9 and 3.11.1
    # https://github.com/python/cpython/issues/99130
    # https://github.com/python/cpython/issues/98706
    "importlib_metadata >= 4.13.0; python_version < '3.12' ",
]
dynamic = ["version"]